traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: not found: value n
  while (n==false){
         ^