traversal.snake.Snake.scala.code
override def run() {
  while (n==false){
    var n=false
    baisseBrosse()
    if (estFaceMur()) {
      if (getDirection() == Direction.OUEST){
        droite()
        if (estFaceMur()) {
          gauche()
          n=true
        }
        avance()
        droite()
      }
      if (getDirection() == Direction.EST){
        gauche()
        if (estFaceMur()) {
          droite()
          n=true
        }
        avance()
        gauche()
      }
    }
    else {
      avance()
    } 
  }
}